8310022: [lworld] C1 compilation asserts with new lightweight locking